# vue-fastapi-firebase

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
admin/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
back/: Dockerfile
back/config/: models.py  settings.py
back/routes/: manage.py
fuf/: .gitignore  pyproject.toml
fuf/admin/: package.json
fuf/back/: __init__.py  __main__.py  app.py  utils.py
fuf/back/config/: model.py  models.py
fuf/back/routes/: content.py  index.py  manage.py
vf2/: .env  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml
vf2/frontend/: .env  package-lock.json
