[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Liam <liam@liam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
beanie = "^1.17.0"
fastapi = "^0.94.1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
pytest = "^7.2.2"
tox = "^4.4.6"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
